--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie": "^0.6.0",
     "cors": "^2.8.5",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
